fixed bug that kept body overflow hidden on new page load

--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -25,6 +25,9 @@
     padding: 0;
     margin: 0;
     color: $color-primary-green;
+    &:focus {
+      outline: none;
+    }
   }
   .navigation {
     top: 0;
@@ -34,7 +37,7 @@
       overflow-y: scroll;
       padding-bottom: 3rem;
       background-color: $color-black;
-      position: absolute;
+      position: fixed;
       top: 0;
       right: 0;
       max-width: 70vw;
